@@ -39,7 +39,6 @@ import org.sosy_lab.cpachecker.cpa.callstack.CallstackState;
 import org.sosy_lab.cpachecker.cpa.callstack.CallstackStateEqualsWrapper;
 import org.sosy_lab.cpachecker.cpa.location.LocationState;
 import org.sosy_lab.cpachecker.util.AbstractStates;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.LoopStructure.Loop;
 import org.sosy_lab.cpachecker.util.Pair;
 
@@ -64,7 +63,7 @@ public abstract class ConditionFolder {
     private final CFA cfa;
     private final Map<CFANode, Loop> loopMap;
 
-    public LoopInfo(final CFA pCfa) {
+    LoopInfo(final CFA pCfa) {
       cfa = pCfa;
       loopMap = buildLoopMap();
     }
@@ -83,10 +82,10 @@ public abstract class ConditionFolder {
         if (loopStack.isEmpty()) {
           l = null;
         } else {
-          l = loopStack.get(loopStack.size() - 1);
+          l = loopStack.getLast();
         }
 
-        for (CFAEdge edge : CFAUtils.allLeavingEdges(node)) {
+        for (CFAEdge edge : node.getAllLeavingEdges()) {
           if (loopMapResult.containsKey(edge.getSuccessor())) {
             continue;
           }
@@ -106,11 +105,11 @@ public abstract class ConditionFolder {
           while (lsucc != null && lsucc.getOutgoingEdges().contains(edge)) {
             // leave edge
             succLoopStack = new ArrayList<>(succLoopStack);
-            succLoopStack.remove(succLoopStack.size() - 1);
+            succLoopStack.removeLast();
             if (succLoopStack.isEmpty()) {
               lsucc = null;
             } else {
-              lsucc = succLoopStack.get(succLoopStack.size() - 1);
+              lsucc = succLoopStack.getLast();
             }
           }
 
@@ -133,7 +132,7 @@ public abstract class ConditionFolder {
       return loopMapResult;
     }
 
-    public boolean leaveLoop(final CFAEdge pEdge) {
+    boolean leaveLoop(final CFAEdge pEdge) {
       Loop l = loopMap.get(pEdge.getPredecessor());
       return l != null
           && !(pEdge instanceof CFunctionCallEdge)
@@ -142,7 +141,7 @@ public abstract class ConditionFolder {
           && !l.getLoopNodes().contains(pEdge.getSuccessor());
     }
 
-    public boolean startNewLoopIteation(final CFAEdge pEdge) {
+    boolean startNewLoopIteation(final CFAEdge pEdge) {
       if (cfa.getAllLoopHeads().orElseThrow().contains(pEdge.getSuccessor())) {
         if (loopMap.get(pEdge.getPredecessor()) == loopMap.get(pEdge.getSuccessor())) {
           return true;
@@ -175,7 +174,6 @@ public abstract class ConditionFolder {
       case LOOP_BOUND -> new BoundUnrollingLoopFolder(pCfa, pConfig);
       case LOOP_BOUND_SAME_CONTEXT -> new BoundUnrollingContextLoopFolder(pCfa, pConfig);
       case LOOP_SAME_CONTEXT -> new ContextLoopFolder(pCfa);
-      default -> throw new AssertionError("Unknown condition folder.");
     };
   }
 
@@ -238,7 +236,7 @@ public abstract class ConditionFolder {
 
   private static class CFAFolder extends ConditionFolder {
 
-    public CFAFolder() {
+    CFAFolder() {
       super(FolderType.CFA);
     }
 
@@ -295,21 +293,21 @@ public abstract class ConditionFolder {
   }
 
   private abstract static class StructureFolder<T> extends ConditionFolder {
-    protected final CFA cfa;
-    protected final Set<CFANode> loopHeads;
+    final CFA cfa;
+    final Set<CFANode> loopHeads;
 
-    protected StructureFolder(final CFA pCfa, final FolderType type) {
+    StructureFolder(final CFA pCfa, final FolderType type) {
       super(type);
       cfa = pCfa;
       Preconditions.checkState(cfa.getAllLoopHeads().isPresent());
       loopHeads = cfa.getAllLoopHeads().orElseThrow();
     }
 
-    protected abstract T getRootFoldId(final ARGState pRoot);
+    abstract T getRootFoldId(final ARGState pRoot);
 
-    protected abstract T adaptID(CFAEdge pEdge, T pFoldID, ARGState pChild);
+    abstract T adaptID(CFAEdge pEdge, T pFoldID, ARGState pChild);
 
-    protected abstract boolean shouldFold(CFANode loc);
+    abstract boolean shouldFold(CFANode loc);
 
     @Override
     public ARGState foldARG(final ARGState pRoot) {
@@ -425,7 +423,7 @@ public abstract class ConditionFolder {
   private static class LoopAlwaysFolder
       extends StructureFolder<Pair<CFANode, CallstackStateEqualsWrapper>> {
 
-    public LoopAlwaysFolder(final CFA pCfa) {
+    LoopAlwaysFolder(final CFA pCfa) {
       super(pCfa, FolderType.LOOP_ALWAYS);
     }
 
@@ -496,8 +494,8 @@ public abstract class ConditionFolder {
         newLoopContext += "|L" + pEdge.getSuccessor().getNodeNumber() + "L";
       }
 
-      if (pEdge instanceof AssumeEdge) {
-        if (((AssumeEdge) pEdge).getTruthAssumption()) {
+      if (pEdge instanceof AssumeEdge assumeEdge) {
+        if (assumeEdge.getTruthAssumption()) {
           newLoopContext += "1";
         } else {
           newLoopContext += "0";
@@ -665,8 +663,8 @@ public abstract class ConditionFolder {
                 + "L";
       }
 
-      if (pEdge instanceof AssumeEdge) {
-        if (((AssumeEdge) pEdge).getTruthAssumption()) {
+      if (pEdge instanceof AssumeEdge assumeEdge) {
+        if (assumeEdge.getTruthAssumption()) {
           newLoopBoundContextID += "1";
         } else {
           newLoopBoundContextID += "0";
