@@ -311,7 +311,7 @@ class AssignmentFormulaHandler {
 
     // Handle full-span assignments upfront, this is better than via the loop below.
     if (rhsList.size() == 1) {
-      final ResolvedPartialAssignmentRhs rhs = rhsList.get(0);
+      final ResolvedPartialAssignmentRhs rhs = rhsList.getFirst();
       final PartialSpan rhsSpan = rhs.span();
       if (rhsSpan.isFullSpan(lhsBitSize) && lhsBitSize == targetBitSize) {
 
@@ -432,7 +432,7 @@ class AssignmentFormulaHandler {
   }
 
   /**
-   * Construct an span-sized bitvector formula containing the part of given right-hand-side formula,
+   * Construct a span-sized bitvector formula containing the part of given right-hand-side formula,
    * as determined by {@code rhsSpan}.
    *
    * @param rhs Resolved array slice containing the expression to convert and type we are converting
@@ -473,7 +473,7 @@ class AssignmentFormulaHandler {
   }
 
   /**
-   * Construct an bitvector formula retaining a range of bits from a given bitvector.
+   * Construct a bitvector formula retaining a range of bits from a given bitvector.
    *
    * @param formula Bitvector formula.
    * @param retainedRange The range determining the bits to retain. The range is assumed to be
@@ -747,7 +747,7 @@ class AssignmentFormulaHandler {
         region = regionMgr.makeMemoryRegion(lvalueType);
       } else { // CCompositeType
         CCompositeTypeMemberDeclaration memberDeclaration =
-            ((CCompositeType) lvalueType).getMembers().get(0);
+            ((CCompositeType) lvalueType).getMembers().getFirst();
         region = regionMgr.makeMemoryRegion(lvalueType, memberDeclaration);
       }
       // for lvalueType
@@ -1281,9 +1281,9 @@ class AssignmentFormulaHandler {
         !useOldSSAIndices || updatedRegions == null,
         "With old SSA indices returning updated regions does not make sense");
 
-    if (lvalueType instanceof CArrayType) {
+    if (lvalueType instanceof CArrayType cArrayType) {
       return makeDestructiveArrayAssignment(
-          (CArrayType) lvalueType,
+          cArrayType,
           rvalueType,
           lvalue,
           rvalue,
